Changes for support of Queens
Update contact details for STFC Cloud

Change navbar links to point to Documents on Read the docs

Do not override font as this font is not present by default

Change links to open in new tabs

Fix FAQ link

Additional text changes to make the portal easier to use

--- a/themes/scd/static/html/faq.html
+++ b/themes/scd/static/html/faq.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/" style="display:inline-block;width:180px;font-variant:small-caps">
-                    <img src="/assets/images/logo.png" id="logo" style="height:25px;display:inline-block;margin-top:-5px" /> scd cloud
+                    <img src="/assets/images/logo.png" id="logo" style="height:25px;display:inline-block;margin-top:-5px" /> stfc cloud
                 </a>
             </div>
 
