Update email addresses for cloud theme

--- a/themes/scd/static/html/faq.html
+++ b/themes/scd/static/html/faq.html
@@ -105,19 +105,19 @@
         <br />
         <h3><a name="resources" href="#resources" class="faq">4. Can I increase the RAM or CPUs?</a></h3>
         <p>
-            Currently we only provide a standard set of resources for each machine. If you would like to discuss increasing these values email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+            Currently we only provide a standard set of resources for each machine. If you would like to discuss increasing these values email us at <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a>.
         </p>
 
         <br />
         <h3><a name="quota" href="#quota" class="faq">5. Can I increase my quota?</a></h3>
         <p>
-            Yes, if you would like your quota increased email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+            Yes, if you would like your quota increased email us at <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a>.
         </p>
 
         <br />
         <h3><a name="disk" href="#disk" class="faq">6. Can I increase my disk size?</a></h3>
         <p>
-            Yes, if you would like access to more storage email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+            Yes, if you would like access to more storage email us at <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a>.
         </p>
 
         <br />
@@ -129,7 +129,7 @@
         <br />
         <h3><a name="os" href="#os" class="faq">8. Do you support other Linux variants/version?</a></h3>
         <p>
-            Yes, if you would like to discuss adding different images or versions to the cloud, email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+            Yes, if you would like to discuss adding different images or versions to the cloud, email us at <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a>.
         </p>
 
         <br />
